<resources>
    <string name="app_name">AndroidMaterialDesign</string>
    <string name="photo_of_the_day_stub">Фотография дня</string>
    <string name="search_wiki">Искать в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в Википедии</string>
    <string name="favourite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="navigationOneTitle">Космос</string>
    <string name="navigationTwoTitle">Анимации</string>
    <string name="differentChipsLayoutDefaultChipText">Default</string>
    <string name="differentChipsLayoutEntryChipText">Entry</string>
    <string name="differentChipsLayoutChoiseChipText">Choice</string>
    <string name="differentChipsLayoutActionChipText">Action</string>
    <string name="differentChipsLayoutFilterChipText">Filter</string>
    <string name="backgroundColoredChipText">Background Color</string>
    <string name="rippleColoredChipText">Ripple Color</string>
    <string name="iconChipText">Chip icon</string>
    <string name="chipGroupChoiceAText">Choice A</string>
    <string name="chipGroupChoiceBText">Choice B</string>
    <string name="chipGroupChoiceCText">Choice C</string>
    <string name="chipGroupChoiceDText">Choice D</string>
    <string name="chipGroupChoiceEText">Choice E</string>
    <string name="tabsTabOneText">Tab 1</string>
    <string name="tabsTabTwoText">Tab 2</string>
    <string name="tabsTabThreeText">Tab 3</string>
    <string name="darkThemeChipText">Dark Theme</string>
    <string name="lightThemeChipText">Light Theme</string>
    <string name="animButtonText">Animate</string>
    <string name="animTextViewText">Transitions example</string>
</resources>